--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   get_it: ^7.6.7
   intl: ^0.19.0
   equatable: ^2.0.5
+  dio: ^5.4.1
+  pretty_dio_logger: ^1.3.1
+  json_serializable: ^6.7.1
 
 dev_dependencies:
   flutter_test:
