--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,7 @@ dependencies:
   intl: ^0.19.0
   equatable: ^2.0.5
   dio: ^5.4.1
-  pretty_dio_logger: ^1.3.1
-  json_serializable: ^6.7.1
+  retrofit: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +60,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.8
   floor_generator: ^1.4.2
+  json_serializable: ^6.7.1
+  retrofit_generator: ^8.1.0
+  http: ^1.2.0
 
 
 # For information on the generic Dart part of this file, see the
