--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,16 +37,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.4
   cached_network_image: ^3.3.1
-  cloud_firestore: ^4.15.8
   floor: ^1.4.2
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.17.8
-  firebase_storage: ^11.6.9
   get_it: ^7.6.7
   intl: ^0.19.0
   equatable: ^2.0.5
   dio: ^5.4.1
   retrofit: ^4.1.0
+  google_nav_bar: ^5.0.6
+  hexcore: ^1.0.2
+  hexcolor: ^3.0.1
+  flutter_svg: ^2.0.10+1
+  line_icons: ^2.0.3
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -57,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   build_runner: ^2.4.8
   floor_generator: ^1.4.2
   json_serializable: ^6.7.1
@@ -77,9 +79,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/svgs/
+    - assets/icons/jpegs/
+    - assets/icons/pngs/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
