--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,17 +38,25 @@ dependencies:
   flutter_bloc: ^8.1.4
   cached_network_image: ^3.3.1
   floor: ^1.4.2
-  get_it: ^7.6.7
   intl: ^0.19.0
   equatable: ^2.0.5
-  dio: ^5.4.1
-  retrofit: ^4.1.0
   google_nav_bar: ^5.0.6
   hexcore: ^1.0.2
   hexcolor: ^3.0.1
   flutter_svg: ^2.0.10+1
   line_icons: ^2.0.3
   google_fonts: ^5.1.0
+  connectivity_plus: ^5.0.2
+  http: ^1.2.0
+  firebase_auth: ^4.17.8
+  firebase_core: ^2.27.0
+  firebase_storage: ^11.6.9
+  cloud_firestore: ^4.15.8
+  google_sign_in: ^6.2.1
+  another_flushbar: ^1.12.30
+  hydrated_bloc: ^9.1.4
+  path_provider: ^2.1.2
+
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +70,7 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   build_runner: ^2.4.8
   floor_generator: ^1.4.2
-  json_serializable: ^6.7.1
-  retrofit_generator: ^8.1.0
-  http: ^1.2.0
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -81,7 +87,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/png/
     - assets/icons/svgs/
+    - assets/icons/gifs/
     - assets/icons/jpegs/
     - assets/icons/pngs/
 
